# JFixLib

./: .gitignore  Doxyfile  README.md  library.json  tags  tlFixKickStart_lights.sc  tlFixKickStart_lights.scd  tlFixLightCombTest.sc  tlFixLightCombTest.scd
JFixLib/: BQ25792.cpp  BQ25792.h  CMakeLists.txt  I2CWrapper.cpp  I2CWrapper.h  NVSStorage.cpp  NVSStorage.h  OTAUpdater.cpp  OTAUpdater.h  blink.cpp  blink.h  globals.h  idf_component.yml  jfixture.cpp  jfixture.h  jonisk.cpp  jonisk.h
SC/: JFixtureCollection.sc
SC/JFixLib/: JFixEvents.sc  JFixture.sc  JFixtureAddr.sc  JFixtureCollection.sc  JFixtureDimmer.sc  JFixtureGraphics.sc  JFixtureGui.sc  JJonisk.sc  JMotorController.sc  JOtaServer.sc  JStethoscope.sc  JTLFix.sc  JTLFixComp.sc  Jllllllllllll.sc
examples/jonisk/: CMakeLists.txt  sdkconfig  test.scd
examples/ledBeam_1m/: ledBeam_1m.config  platformio.ini  test.scd
examples/ledBeam_2m/: ledBeam_2m.config  platformio.ini  test.scd
examples/llllllllllll/: llllllllllll.config  platformio.ini  test.scd  test2.scd
examples/test/: platformio.ini  test.scd  (+2 more)
src/: Event.cpp  Event.h  FastLedContstants.h  JEnv.cpp  JEnv.h  JEspnowDevice.cpp  JEspnowDevice.h  JEthernetDevice.h  JEvent_Perlin.cpp  JEvent_Perlin.h  JFixLib.cpp  JFixLib.h  JFixture.cpp  JFixture.h  JFixtureAddr.cpp  JFixtureAddr.h  JFixtureDimmer.h  JFixtureGraphics.h  JJonisk.h  JLag.cpp  JLag.h  JLedBeam.h  JModes.h  JMotorController.cpp  JMotorController.h  JOsc.h  JOtaServer.cpp  JOtaServer.h  JRect.cpp  JTlFix.h  JTlFixEthernet.h  Jllll.h  defines.h  ofNoise.h  otaServer.h
(+42 files in other folders)
